<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    android:orientation="vertical"
    android:focusableInTouchMode="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:elevation="@dimen/dimen_12dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_24dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/avtarImg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:padding="@dimen/dimen_8dp"
                android:src="@drawable/user"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="2dp"
                app:civ_shadow="false"
                app:civ_shadow_color="#8BC34A"
                app:civ_shadow_radius="10" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/rdMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:paddingLeft="@dimen/dimen_8dp"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/rdFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/dimen_8dp"
                    android:text="Female" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_age"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtIntro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_intro"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:minLines="3"
                    android:imeOptions="actionNext"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnInterest"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/choose_interest"
                android:textColor="@color/colorPrimary"
                 />

            <Button
                android:id="@+id/btnSubmit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/submit"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>